--- a/apps/docs/pages/get-started.mdx
+++ b/apps/docs/pages/get-started.mdx
@@ -1,3 +1,5 @@
-# Get Started
+# Getting Started
 
-# Hello World
+## Prerequisites
+
+To get started you first need to create an account at https://loccy.vercel.app
