--- a/apps/docs/pages/get-started.mdx
+++ b/apps/docs/pages/get-started.mdx
@@ -2,4 +2,5 @@
 
 ## Prerequisites
 
-To get started you first need to create an account at https://loccy.vercel.app
+To get started you first need to create a free account at https://loccy.app
+Upon registration loccy will create a new project for you.
