--- a/apps/docs/pages/get-started.mdx
+++ b/apps/docs/pages/get-started.mdx
@@ -4,3 +4,4 @@
 
 To get started you first need to create a free account at https://loccy.app
 Upon registration loccy will create a new project for you.
+Navigate to the _Secrets_ tab and create a new secret.
