--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,1 +1,15 @@
-# Test
+# Loccy
+
+### TL;DR:
+
+**Loccy** is an open-source localization tool that integrates with your existing translation workflow. It's a web app that allows you to manage your translations in a single place, and it's free for open-source projects.
+
+## `test`
+
+Loccy is built with the following principles in mind:
+
+- **Open-source:** Loccy is open-source, and it's free for open-source projects.
+- **Easy to use:** Loccy is easy to use, and it's easy to integrate with your existing workflow.
+- **Amazing DX:** Loccy integrates with your existing libraries and tools, and it's easy to set up.
+- **Clean UI:** Loccy is easy to use and helps you focus on what's important.
+- **Fully Typed:** Loccy is fully typed, and it's built with TypeScript. It also makes your libraries 100% type-safe.
