feat: auto config init for next-i18next

--- a/apps/docs/pages/getting-started.mdx
+++ b/apps/docs/pages/getting-started.mdx
@@ -5,3 +5,4 @@ Before you're able to use **Loccy** in your projects you will need to set-up a f
 1. Create an account on [Loccy](https://www.loccy.app)
 2. Generate an API key
 3. Install the CLI tool by running `npm install -g @loccy/cli`
+4. Run `loccy init -t <YOUR_API_KEY>`
