--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,10 +1,11 @@
 # Loccy
 
-### TL;DR:
+### TL;DR
 
-**Loccy** is an open-source localization tool that integrates with your existing translation workflow. It's a web app that allows you to manage your translations in a single place, and it's free for open-source projects.
+**Loccy** is an open-source localization tool that integrates with your existing translation workflow.
+It's a web app that allows you to manage your translations in a single place, and it's free for open-source projects.
 
-## `test`
+## Philosphy
 
 Loccy is built with the following principles in mind:
 
