--- a/apps/docs/pages/getting-started.mdx
+++ b/apps/docs/pages/getting-started.mdx
@@ -4,5 +4,6 @@ Before you're able to use **Loccy** in your projects you will need to set-up a f
 
 1. Create an account on [Loccy](https://www.loccy.app)
 2. Generate an API key
-3. Install the CLI tool by running `npm install -g @loccy/cli`
-4. Run `loccy init -t <YOUR_API_KEY>`
+3. `cd` into your project directory
+4. Install the CLI tool by running `npm install -g @loccy/cli`
+5. Run `loccy init -t <YOUR_API_KEY>`
